# imgpush

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker.yml
ImageMagick-6/: policy.xml
app/: app.py  entrypoint.sh  imgpush.py  settings.py  wsgi.py
kubernetes/: deployment-example.yaml  policy.xml
stubs/: filetype.pyi  nudenet.pyi  timeout_decorator.pyi
stubs/wand/: __init__.pyi  exceptions.pyi  image.pyi
